--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <HTMl lang="es-ar">
-    <head>
-        <title>CSS</title>
-        <meta charset="utf-8"> 
-    </head>
-    <body>
-        <p>Hola criaturitas del señor</p>
-    </body>
+
+<head>
+    <title>CSS</title>
+    <link rel="stylesheet" href="CSS/style.css">
+    <meta charset="utf-8">
+    <!--<style>
+            p{
+                color: blueviolet;
+                font-size: 20px;
+                background: black;
+            }
+        </style> -->
+</head>
+
+<body>
+    <p id="black">Hola criaturitas del señor</p>
+    <!-- <p style="color: blueviolet; font-size: 25px; 
+        background: black;">Hola criaturitas del señor</p> -->
+    <hr>
+    <section>
+        <p>Hola culiao</p>
+    </section>
+</body>
+
 </HTMl>
